[metadata]

name = pyudev
author = Sebastian Wiesner
author_email = lunaryorn@gmail.com
url = http://github.com/pyudev/pyudev
description = A libudev binding
license = LGPL 2.1+
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: pyudev.version.__version__
platforms =
    Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware
    Topic :: System :: Operating System Kernels :: Linux

[options]
python_requires = >=3.7

package_dir =
    =src
    tests=tests

packages =
    pyudev
    pyudev._ctypeslib
    pyudev.device
    pyudev._os
    tests
    tests.utils
    tests.plugins
    tests._device_tests
